force-app/main/default/objects/msmxSheet__MsmxFolder__c/msmxSheet__MsmxFolder__c.object-meta.xml
<CustomObject>
    <label>Mashmatrixフォルダ</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>