force-app/main/default/objects/msmxSheet__MsmxFolder__c/fields/msmxSheet__Account__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mashmatrix Book Folder</relationshipLabel>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>