force-app/main/default/objects/msmxSheet__MsmxFolder__c/fields/msmxSheet__Parent__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Folder</label>
    <referenceTo>msmxSheet__MsmxFolder__c</referenceTo>
    <relationshipLabel>Mashmatrix Book Folders</relationshipLabel>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>