force-app/main/default/objects/msmxSheet__MsmxFolder__c/fields/msmxSheet__SharedTo__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__SharedTo__c</fullName>
    <label>Shared To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>